# QuantPyLab

./: .gitignore  README.md  main.py  pyproject.toml
.gemini/: GEMINI.md
.gemini/commands/: gitCommitAndPush.toml  standardDev.toml
analysis/processors/: ttm_calculator.py
config/: settings.py
data_ingestion/collectors/: etf_collector.py  financial_collector.py  headers.py  industry_collector.py  kline_collector.py  share_collector.py  stock_list.py
docs/: architecture.md  data_catalog.md  data_schema.md  em_indicator_dict.csv  kline_architecture_rfc.md  storage_architecture_rfc.md  usage.md  utilities.md  view_architecture.md  view_definition.sql
docs/catalog/: financial_indicators.md  market_data.md  valuation_ttm.md
investigation/: 2026_New_Alpha_Portfolio_Decision.md
investigation/equities/: 2026年度投资组合建议报告.md  deep_investment_analysis_framework.md  note.md  扬农化工_市场情绪评估报告_20250512.md  扬农化工_看多逻辑独立验证报告.md
investigation/industry/: OpenAI-营收超预期，利润承压.md  ai_bubble_analysis_report.md  ai_data_verification_report.md  中国氢能与绿氢行业深度研究报告_2026年6月.md  中国海上风电行业深度研究报告_2026年6月.md  中国特高压投资建设行业深度研究报告_2026年7月.md  中国风电行业深度研究报告_2026年6月.md  功率半导体行业_投资标的深度分析_2026年6月.md  欧洲海上风电行业深度研究报告_2026年6月.md  生猪养殖行业_猪周期反转研判_2026年6月.md  电化学储能行业深度研究报告.md  碳酸锂市场深度调研报告_2026年6月.md  (+3 more)
utils/: financial.py  logger.py  retry.py  trade_date.py
workspace/: catalog_seed_em.csv  data_catalog_plan.md  design_indicator_sync_optimization.md  em_indicator_dict.csv  extract_catalog_em.py  extract_catalog_sina.py  fin_indicator_design.md  full_indicator_comparison.md  full_indicator_matrix.md
(+1093 files in other folders)
