[project]
name = "quantpylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.22",
    "duckdb>=1.4.4",
    "linkify-it-py>=2.1.0",
    "markdown-it-py>=4.0.0",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "pyarrow>=23.0.0",
    "tqdm>=4.67.1",
]
